<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="berkay.ders.mobilprogramlama.semesterproject.activity.CreateOrEditContactActivity"
    tools:showIn="@layout/activity_create_or_edit_contact">

    <EditText
        android:id="@+id/editText_createOrEditContactActivity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"/>

    <EditText
        android:id="@+id/editText_createOrEditContactActivity_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_surname"
        android:layout_below="@+id/editText_createOrEditContactActivity_name"/>

    <EditText
        android:id="@+id/editText_createOrEditContactActivity_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"
        android:layout_below="@+id/editText_createOrEditContactActivity_surname"/>

    <EditText
        android:id="@+id/editText_createOrEditContactActivity_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/editText_createOrEditContactActivity_phoneNumber"/>

    <TextView
        android:id="@+id/textView_createOrEditContactActivity_homeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_createOrEditContactActivity_email"
        android:text="@string/text_view_select_home_location"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <fragment
        android:id="@+id/map_createOrEditContactActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/textView_createOrEditContactActivity_homeAddress"
        android:layout_above="@+id/button_createOrEditContactActivity_saveContact"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/button_createOrEditContactActivity_saveContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        fancy:fb_text="@string/button_save_contact"
        android:layout_alignParentBottom="true"
        android:onClick="button_createOrEditContactActivity_saveContact_onClick"
        fancy:fb_defaultColor="@color/colorPrimary"
        fancy:fb_textSize="20sp"
        android:textColor="@color/White"
        fancy:fb_radius="10dp"/>

</RelativeLayout>