<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="berkay.ders.mobilprogramlama.semesterproject.activity.SingleContactActivity"
    tools:showIn="@layout/activity_single_contact"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_phone_black_48dp"/>

            <TextView
                android:id="@+id/textView_singleContactActivity_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold"
                android:maxEms="11"
                android:maxLines="1"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:onClick="textView_singleContactActivity_phoneNumber_onClick"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/imageView_singleContactActivity_sendSms"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_textsms_black_48dp"
                android:onClick="imageView_singleContactActivity_sendSms_onClick"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout_singleContactActivity_eMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:onClick="linearLayout_singleContactActivity_eMail_onClick">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_email_black_48dp"/>

            <TextView
                android:id="@+id/textView_singleContactActivity_eMailAdress1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:maxLines="2"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_about"
                android:textSize="22sp"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/textView_singleContactActivity_firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_surname"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/textView_singleContactActivity_lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_email_address"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/textView_singleContactActivity_eMailAdress2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_total_incoming_duration"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/textView_singleContactActivity_incomingCallDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_total_outgoing_duration"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/textView_singleContactActivity_outgoingCallDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_total_missing_call_count"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/textView_singleContactActivity_missingCallCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_total_sent_message_count"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/textView_singleContactActivity_sentMessageCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_total_received_message_count"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/textView_singleContactActivity_receivedMessageCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_home_location"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>

                <fragment
                    android:id="@+id/map_singleContactActivity"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>