<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="berkay.ders.mobilprogramlama.semesterproject.activity.MessageActivity"
    tools:showIn="@layout/activity_message"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/editText_messageActivity_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/hint_phone_number"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/listView_messageActivity_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editText_messageActivity_phoneNumber"
        android:layout_above="@+id/linearLayout_messageActivity_userInput"
        android:divider="@null"
        android:dividerHeight="2dp"
        android:clickable="false"/>

    <RelativeLayout
        android:id="@+id/linearLayout_messageActivity_userInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/editText_messageActivity_messageInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_enter_your_message"
            android:layout_toLeftOf="@+id/button_messageActivity_send"
            android:layout_toStartOf="@+id/button_messageActivity_send"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_messageActivity_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            fancy:fb_text="@string/button_send"
            fancy:fb_textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="button_messageActivity_send_onClick"
            fancy:fb_defaultColor="@color/colorPrimary"
            fancy:fb_radius="10dp"/>

    </RelativeLayout>

</RelativeLayout>
